--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -4,7 +4,7 @@
     <PreferenceCategory
         android:key="app_settings"
         android:title="@string/app_settings" >
-        <SwitchPreference
+        <CheckBoxPreference
             android:defaultValue="true"
             android:key="custom_internal_sd"
             android:title="@string/custom_internal_sd" />
@@ -14,11 +14,7 @@
             android:summary="@string/enter_internal_sd_path"
             android:title="@string/internal_sd_path" />
 
-        <MultiSelectListPreference
-            android:key="change_system_dirs_path"
-            android:title="@string/change_system_dirs_path" />
-
-        <SwitchPreference
+        <CheckBoxPreference
             android:defaultValue="false"
             android:key="enable_for_all_apps"
             android:title="@string/enable_for_all_apps" />
@@ -30,11 +26,11 @@
             android:key="disable_for_apps"
             android:title="@string/disable_for_apps" />
 
-        <SwitchPreference
+        <CheckBoxPreference
             android:defaultValue="false"
             android:key="include_system_apps"
             android:title="@string/include_system_apps" />
-        <SwitchPreference
+        <CheckBoxPreference
             android:defaultValue="true"
             android:key="sdcard_full_access"
             android:title="@string/sdcard_full_access" />
