--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -6,13 +6,18 @@
         android:title="@string/app_settings" >
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="custom_internal_sd"
-            android:title="@string/custom_internal_sd" />
+            android:key="custom_internal_sdcard_path"
+            android:title="@string/custom_internal_sdcard_path" />
 
         <EditTextPreference
-            android:key="internal_sd_path"
-            android:summary="@string/enter_internal_sd_path"
-            android:title="@string/internal_sd_path" />
+            android:key="internal_sdcard_path"
+            android:summary="@string/enter_internal_sdcard_path"
+            android:title="@string/internal_sdcard_path" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="enable_for_all_apps"
+            android:title="@string/enable_for_all_apps" />
 
         <MultiSelectListPreference
             android:key="enable_for_apps"
@@ -23,9 +28,9 @@
             android:key="include_system_apps"
             android:title="@string/include_system_apps" />
         <CheckBoxPreference
-            android:defaultValue="true"
-            android:key="sdcard_full_access"
-            android:title="@string/sdcard_full_access" />
+            android:defaultValue="false"
+            android:key="external_sdcard_full_access"
+            android:title="@string/external_sdcard_full_access" />
     </PreferenceCategory>
 
 </PreferenceScreen>
