--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -22,13 +22,16 @@
         <MultiSelectListPreference
             android:key="enable_for_apps"
             android:title="@string/enable_for_apps" />
+        <MultiSelectListPreference
+            android:key="disable_for_apps"
+            android:title="@string/disable_for_apps" />
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="include_system_apps"
             android:title="@string/include_system_apps" />
         <CheckBoxPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="external_sdcard_full_access"
             android:title="@string/external_sdcard_full_access" />
     </PreferenceCategory>
