Option to hide app icon, added package names next to app names

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -34,6 +34,11 @@
             android:defaultValue="true"
             android:key="external_sdcard_full_access"
             android:title="@string/external_sdcard_full_access" />
+
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="show_app_icon"
+            android:title="@string/show_app_icon" />
     </PreferenceCategory>
 
 </PreferenceScreen>
